--- a/clientRest/src/main/resources/application.properties
+++ b/clientRest/src/main/resources/application.properties
@@ -4,11 +4,10 @@ spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.time-zone=America/Bogota
 spring.application.name=clientRest
 
-server.port=8081
 # Configuración de la base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5432/clientdb
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://192.168.26.12:5432/clientdb
+spring.datasource.username=clientdb
+spring.datasource.password=clientdb
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuración de JPA
