--- a/clientRest/Dockerfile
+++ b/clientRest/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:23-jdk AS build
+FROM eclipse-temurin:21 AS build
 WORKDIR /app
 COPY . .
 RUN apt-get update && apt-get install -y maven
