--- a/clientRest/src/main/resources/application.properties
+++ b/clientRest/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.time-zone=America/Bogota
 spring.application.name=clientRest
 
+server.port=8080
 # Configuración de la base de datos
 spring.datasource.url=jdbc:postgresql://192.168.26.12:5432/clientdb
 spring.datasource.username=clientdb
