--- a/clientRest/src/main/resources/application.properties
+++ b/clientRest/src/main/resources/application.properties
@@ -5,28 +5,28 @@ spring.jackson.time-zone=America/Bogota
 spring.application.name=clientRest
 
 server.port=8080
-# Configuraci髇 de la base de datos
+# Configuraci贸n de la base de datos
 spring.datasource.url=jdbc:postgresql://192.168.26.12:5432/clientdb
 spring.datasource.username=clientdb
 spring.datasource.password=clientdb
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuraci髇 de JPA
+# Configuraci贸n de JPA
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# Configuraci髇 de logging
+# Configuraci贸n de logging
 logging.level.org.hibernate.SQL=debug
 logging.level.org.springframework=INFO
 logging.level.com.example.filesystemmanager=DEBUG
 
-# Configuraci髇 de Jackson para manejar recursi髇 en relaciones bidireccionales
+# Configuraci贸n de Jackson para manejar recursi贸n en relaciones bidireccionales
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
-# Configuraci髇 para manejar errores
+# Configuraci贸n para manejar errores
 server.error.include-message=always
 server.error.include-binding-errors=always
 
