--- a/flight-reservation-backend/Dockerfile
+++ b/flight-reservation-backend/Dockerfile
@@ -1,5 +1,22 @@
 FROM node:22
+
+# Create the working directory
 RUN mkdir -p /home/app
-COPY . /home/app
+
+# Set the working directory
+WORKDIR /home/app
+
+# Copy package.json and package-lock.json
+COPY package*.json ./
+
+# Install dependencies
+RUN npm install
+
+# Copy the rest of the application code
+COPY . .
+
+# Expose the port your app runs on
 EXPOSE 3000
-CMD ["node", "/home/app/index.js"]
+
+# Start the application
+CMD ["node", "index.js"]
