--- a/flight-reservation-backend/package.json
+++ b/flight-reservation-backend/package.json
@@ -17,8 +17,10 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "graphql": "^16.9.0",
-    "mongoose": "^8.7.1",
-    "soap": "^1.1.5"
+    "moment-timezone": "^0.5.46",
+    "mongoose": "^8.8.0",
+    "soap": "^1.1.6",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
