--- a/reservas-frontend/package.json
+++ b/reservas-frontend/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "graphql": "^16.9.0",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
@@ -34,7 +35,7 @@
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "sweetalert2": "^11.14.3",
+    "sweetalert2": "^11.14.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
