--- a/flight-reservation-backend/package.json
+++ b/flight-reservation-backend/package.json
@@ -18,7 +18,8 @@
     "express": "^4.21.1",
     "graphql": "^16.9.0",
     "mongoose": "^8.7.1",
-    "soap": "^1.1.5"
+    "soap": "^1.1.5",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
