--- a/reservas-frontend/.env
+++ b/reservas-frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=http://185.209.230.19:8081
-VITE_API_BASE_URL_CLIENT=http://localhost:8081
+VITE_API_BASE_URL=http://192.168.26.23:8081
+VITE_API_BASE_URL_CLIENT=http://192.168.26.13:8080
